--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,9 @@
 <div class="header-bg"></div>
-<header itemscope class="wrap clearfix">
-  <div class="nav-header">
-    <div class="logo-section">
-      <a href="/"><img class="site-logo" src="/assets/images/logo.png" alt="Front Range Fire Rescue" itemprop="logo"></a>
-    </div>
-    <nav class="top-nav" id="menu">
-      {% include nav.html nav=site.data.menu %}
-    </nav>
+<header class="site-header">
+  <div class="logo-section">
+    <a href="/"><img class="site-logo" src="/assets/images/logo.png" alt="Kaizen IBBA" itemprop="logo"></a>
   </div>
+  <nav class="top-nav" id="menu">
+    {% include nav.html nav=site.data.menu %}
+  </nav>
 </header>
