Setting up site design variables, layout, some example content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="wrap">
+<footer class="site-footer">
   <div class="left">
     <span>Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} All Rights Reserved.
     </span>
