--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -1,4 +1,11 @@
 ---
 layout: default
 ---
-<div class="content-wrapper front"><main>{{ content }}</main></div>
+
+<main class="front">
+  <header class="page-header">
+    <h1>{{ page.title }}</h1>
+    <h4 class="subtitle">{{ page.subtitle }}</h4>
+  </header>
+  <section class="content-area">{{ content }}</section>
+</main>
