--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,12 +2,10 @@
 layout: default
 ---
 
-<div class="content-wrapper not-front">
-  <main class="wrap">
-      <header>
-        <h1>{{ page.title }}</h1>
-        <h3 class="subtitle">{{ page.subtitle }}</h3>
-      </header>
-      <section class="clearfix">{{ content }}</section>
-  </main>
-</div>
+<main>
+  <header class="page-header">
+    <h1>{{ page.title }}</h1>
+    <h4 class="subtitle">{{ page.subtitle }}</h4>
+  </header>
+  <section class="content-area">{{ content }}</section>
+</main>
