--- a/assets/scss/partials/global/_settings.scss
+++ b/assets/scss/partials/global/_settings.scss
@@ -1,7 +1,41 @@
 body {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
   margin: 0;
+  font-family: 'Josefin Sans', arial, sans-serif;
+	font-size: 22px;
+  background: $body-bg;
   overflow-x: hidden;
-  * {
-    box-sizing: border-box;
+}
+* {
+  box-sizing: border-box;
+  &:focus {
+    outline: none;
   }
+}
+div, p {
+  color: $white;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+p, h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+::-webkit-scrollbar {
+  width: .5rem;
+}
+::-webkit-scrollbar-button {
+  display: none;
+}
+::-webkit-scrollbar-track {
+  background: rgba($black, .1);
+}
+::-webkit-scrollbar-thumb {
+  background: rgba($black, .4);
+}
+@include selection {
+  color: $white;
+  background: lighten($blue, 10%);
+  text-shadow: none;
 }
