--- a/assets/scss/partials/layout/_header.scss
+++ b/assets/scss/partials/layout/_header.scss
@@ -1,3 +1,81 @@
 .site-header {
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: .5rem 2rem;
+  z-index: 5;
+  background: rgba($black, .75);
+  transition: {
+    property: background;
+    duration: .5s;
+    timing-function: $cubic;
+  }
+  &.down {
+    background: $red;
+    nav ul li a {
+      color: rgba($white, .8);
+      &:hover {
+        color: $white;
+      }
+    }
+  }
+  .logo-section {
+    float: left;
+  }
+  nav {
+    float: right;
+    font-size: 2rem;
+    text-shadow: $text-shadow-dark;
+    font-family: 'Shojumaru', cursive;
+  	font-size: 16px;
+    letter-spacing: .125rem;
+    color: $red;
+    ul {
+      @include pseudo-list;
+      position: absolute;
+      padding: 1rem;
+      top: 100vh;
+      right: 1rem;
+      box-shadow: $def-shadow;
+      opacity: 0;
+      transition: {
+        property: opacity;
+        duration: .5s;
+        timing-function: $cubic;
+      }
+      li {
+        text-align: right;
+      }
+      &.open {
+        top: 5rem;
+        opacity: 1;
+      }
+    }
+    a {
+      color: $red;
+      cursor: pointer;
+      &:hover, &:focus, &:visited {
+        color: $white;
+      }
+    }
+    @include breakpoint($tablet) {
+      .mobile-menu-open {
+        display: none;
+      }
+      ul {
+        @include inline-list;
+        position: relative;
+        top: 0 !important;
+        opacity: 1 !important;
+        background: transparent;
+        padding: 0;
+        box-shadow: none;
+        li {
+          text-align: left;
+          padding-left: 1rem;
+        }
+      }
+    }
+  }
 }
