--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,9 +16,8 @@
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css" media="screen" />
 	<link rel="stylesheet" href="/assets/css/style.css" media="screen" />
-	<link rel="stylesheet" href="/assets/css/print.css"  media="print" />
 	<link rel="stylesheet" href="/assets/css/colorbox.css">
-	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Shojumaru" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,100i,400,400i,700|Shojumaru" rel="stylesheet">
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 	<script>window.Modernizr || document.write('<script src="/assets/js/prod/modernizr-2.8.3.min.js"><\/script>')</script>
