--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -3,18 +3,16 @@
 <script>window.jQuery || document.write('<script src="/assets/js/prod/jquery-1-11-1.min.js"><\/script>')</script>
 <script src="https://use.fontawesome.com/bf7c42290d.js"></script>
 
-<script type="text/javascript" src="/assets/js/prod/scripts.js"></script>
-<script type="text/javascript" src="/assets/js/prod/header.js"></script>
-<script src="/assets/js/dev/jquery.colorbox-min.js"></script>
+<script src="/assets/js/prod/script.js"></script>
+<script src="/assets/js/prod/jquery.colorbox-min.js"></script>
 
-{% if site.google_analytics_tracking_id %}
-<!-- google analytics -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', '{{ site.google_analytics_tracking_id }}', 'auto');
-  ga('send', 'pageview');
-</script>
-{% endif %}
+<!-- {% if site.google_analytics_tracking_id %}
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', '{{ site.google_analytics_tracking_id }}', 'auto');
+    ga('send', 'pageview');
+  </script>
+{% endif %} -->
