--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,9 @@
 <!--[if lte IE 8]><html class="no-js lte-ie8" lang="en"><![endif]-->
 <!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]-->
   {% include head.html %}
-  <body>
+  <body class="not-logged-in">
   {% include browserupgrade.html %}
-  
+
   {% include header.html %}
   <div class="site-wrap">{{ content }}</div>
   {% include footer.html %}
