--- a/assets/scss/partials/global/_tooltip.scss
+++ b/assets/scss/partials/global/_tooltip.scss
@@ -11,7 +11,7 @@
     padding: .25rem .5rem;
     border-radius: .5rem;
     z-index: 10;
-    box-shadow: $def-shadow;
+    box-shadow:  .125rem 1rem rgba($black, .5);
     filter: opacity(0) blur(5px);
     transition: {
       property: transform, filter;
