--- a/assets/scss/partials/layout/_header.scss
+++ b/assets/scss/partials/layout/_header.scss
@@ -22,23 +22,32 @@
   }
   .logo-section {
     float: left;
+    img {
+      max-height: 100px;
+      margin-bottom: -80px;
+      filter: drop-shadow(0 0 .25rem $black);
+    }
   }
   nav {
     float: right;
-    font-size: 2rem;
-    text-shadow: $text-shadow-dark;
-    font-family: 'Shojumaru', cursive;
-  	font-size: 16px;
+    text-align: right;
+    width: 85%;
+    text-shadow: 0.0625em 0.0625em 0.125em $black;
     letter-spacing: .125rem;
     color: $red;
+    font: {
+      family: 'Shojumaru', cursive;
+      size: 1rem;
+    }
     ul {
       @include pseudo-list;
       position: absolute;
       padding: 1rem;
       top: 100vh;
       right: 1rem;
-      box-shadow: $def-shadow;
+      box-shadow: 0 .125rem 1rem rgba($black, .5);
       opacity: 0;
+      font-size: 1rem;
       transition: {
         property: opacity;
         duration: .5s;
@@ -46,17 +55,17 @@
       }
       li {
         text-align: right;
+        a {
+          color: $red;
+          cursor: pointer;
+          &:hover, &:focus {
+            color: $white;
+          }
+        }
       }
       &.open {
         top: 5rem;
         opacity: 1;
-      }
-    }
-    a {
-      color: $red;
-      cursor: pointer;
-      &:hover, &:focus, &:visited {
-        color: $white;
       }
     }
     @include breakpoint($tablet) {
