--- a/assets/scss/partials/presets/_vars.scss
+++ b/assets/scss/partials/presets/_vars.scss
@@ -7,21 +7,12 @@ $blue: #0072c6;
 $red: #940101;
 $orange: #f66000;
 
-// area styles
-$body-bg: $black linear-gradient(transparent, $black, darken($red, 15%));
-
 // timing functions
 $cubic: cubic-bezier(.5, .08, .24, 1);
 
 // breakpoints
 $phone: 20em; /* 320/16 */
+$phone-large: 26em; /* 416/16 */
 $tablet: 48em; /* 768/16 */
 $desktop: 75em; /* 1200/16 */
-
-// shadows
-$def-shadow: 0 .125rem 1rem rgba($black, .5);
-$hover-shadow: 0 .5rem 1rem rgba($black, .75);
-$dark-shadow: 0 0 2rem $black;
-$light-shadow: 0 0 1rem rgba($black, .5);
-$text-shadow-dark: 1px 1px 2px $black;
-$text-shadow-light: 1px .125rem .25rem rgba($black, .5);
+$desktop-large: 112.5em; /* 1800/16 */
