Further template setups, polishing object styles, added calendar embeds and background image.

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,4 +8,30 @@ layout: default
     <h4 class="subtitle">{{ page.subtitle }}</h4>
   </header>
   <section class="content-area">{{ content }}</section>
+  <section class="content-area">
+    <article class="front-display-box">
+      <a href="/programs/">
+        <header>
+          <h2>Programs</h2>
+        </header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
+      </a>
+    </article>
+    <article class="front-display-box">
+      <a href="/events/">
+        <header>
+          <h2>Events</h2>
+        </header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
+      </a>
+    </article>
+    <article class="front-display-box">
+      <a href="/gallery/">
+        <header>
+          <h2>Gallery</h2>
+        </header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
+      </a>
+    </article>
+  </section>
 </main>
