--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,1 +1,40 @@
-<!-- Google maps embed -->
+<article class="calendar page-content-item">
+  <header class="page-content-header"><h4>Events:</h4></header>
+  <iframe src="https://calendar.google.com/calendar/embed?src=e388utric889edforu1lf069tc%40group.calendar.google.com&ctz=America/Denver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+</article>
+<article class="calendar page-content-item">
+  <header class="page-content-header"><h4>Dragons:</h4></header>
+  <iframe src="https://calendar.google.com/calendar/embed?src=07o098d5tcv59m9l2ma5bf8j5k%40group.calendar.google.com&ctz=America/Denver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+</article>
+<article class="calendar page-content-item">
+  <header class="page-content-header"><h4>Tigers and Eagles:</h4></header>
+  <iframe src="https://calendar.google.com/calendar/embed?src=1vh4hvcu0hlga9puojho716uhs%40group.calendar.google.com&ctz=America/Denver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+</article>
+<article class="calendar page-content-item">
+  <header class="page-content-header"><h4>Panthers:</h4></header>
+  <iframe src="https://calendar.google.com/calendar/embed?src=anfjb8gfaiunkhvfnlo1gh6fvg%40group.calendar.google.com&ctz=America/Denver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+</article>
+<article class="calendar page-content-item">
+  <header class="page-content-header"><h4>Jr. Black Belts:</h4></header>
+  <iframe src="https://calendar.google.com/calendar/embed?src=mr4714n9h1m6e9l3gt2jmgqob4%40group.calendar.google.com&ctz=America/Denver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+</article>
+<article class="calendar page-content-item">
+  <header class="page-content-header"><h4>Adults:</h4></header>
+  <iframe src="https://calendar.google.com/calendar/embed?src=lgl1idmm2hq93fasmvk0f545p4%40group.calendar.google.com&ctz=America/Denver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+</article>
+<article class="calendar page-content-item">
+  <header class="page-content-header"><h4>Provisionals:</h4></header>
+  <iframe src="https://calendar.google.com/calendar/embed?src=1oeas09dn1k2srihrskrp369a8%40group.calendar.google.com&ctz=America/Denver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+</article>
+<article class="calendar page-content-item">
+  <header class="page-content-header"><h4>Black Belts:</h4></header>
+  <iframe src="https://calendar.google.com/calendar/embed?src=1ni3bbr5froteumuouc5vuqg1k%40group.calendar.google.com&ctz=America/Denver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+</article>
+<article class="calendar page-content-item">
+  <header class="page-content-header"><h4>Masters:</h4></header>
+  <iframe src="https://calendar.google.com/calendar/embed?src=541lgc266fjvrakt3f9so892vk%40group.calendar.google.com&ctz=America/Denver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+</article>
+<article class="calendar page-content-item">
+  <header class="page-content-header"><h4>Kickboxing:</h4></header>
+  <iframe src="https://calendar.google.com/calendar/embed?src=pi1iud5faatk1puaorpnogfsl8%40group.calendar.google.com&ctz=America/Denver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+</article>
