--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,8 @@
+<div class="mobile-menu-toggle">
+  <span>Menu</span> <i class="fa fa-bars" aria-hidden="true"></i>
+</div>
 {% assign navurl = page.url | remove: 'index.html' %}
-<ul class="menu hide">
+<ul class="menu">
   {% for item in include.nav %}
     <li class="first">
       <a href="{{ item.url }}" class="{% if item.url == navurl %}active{% endif %}">{{ item.text }}</a>
