--- a/assets/scss/partials/page/_front.scss
+++ b/assets/scss/partials/page/_front.scss
@@ -1,3 +1,29 @@
 .front {
-  
+  .content-area {
+    @include breakpoint($tablet) {
+      display: flex;
+      .front-display-box {
+        margin: 1rem;
+        padding: 1rem;
+        flex: 25% 1;
+        background: lighten($black, 10%);
+        transition: {
+          property: transform;
+          duration: .5s;
+          timing-function: $cubic;
+        }
+        header {
+          padding-bottom: .5rem;
+          border-bottom: .25rem solid $red;
+          margin-bottom: .5rem;
+        }
+        p {
+          font-size: 1.5rem;
+        }
+        &:hover {
+          transform: scale(1.1);
+        }
+      }
+    }
+  }
 }
