--- a/assets/scss/partials/page/_page.scss
+++ b/assets/scss/partials/page/_page.scss
@@ -3,6 +3,14 @@
   .page-content-item {
     padding: 1rem;
     margin-bottom: 1rem;
+    // transition: {
+    //   property: transform;
+    //   duration: .5s;
+    //   timing-function: $cubic;
+    // }
+    // &:hover {
+    //   transform: scale(1.1);
+    // }
     &:nth-of-type(odd) {
       background: linear-gradient(to bottom left, rgba($white, .1), rgba(lighten($red, 10%), .1));
     }
