Slight tweaks to the events and members page to change where the calendars live.

--- a/_layouts/members.html
+++ b/_layouts/members.html
@@ -3,4 +3,9 @@ layout: page
 ---
 
 <section class="login-area">{% include login.html %}</section>
-<section class="staff page-content-area">{{ content }}</section>
+<section class="staff page-content-area">
+  {{ content }}
+</section>
+<section class="staff page-content-area">
+  {% include events.html %}
+</section>
