--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -4,5 +4,8 @@ layout: page
 
 <article class="sub-header">{{ content }}</article>
 <section class="events page-content-area">
-  {% include events.html %}
+  <article class="calendar page-content-item">
+    <header class="page-content-header"><h4>Events:</h4></header>
+    <iframe src="https://calendar.google.com/calendar/embed?src=e388utric889edforu1lf069tc%40group.calendar.google.com&ctz=America/Denver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+  </article>
 </section>
