--- a/_layouts/staff.html
+++ b/_layouts/staff.html
@@ -4,18 +4,18 @@ layout: page
 
 <article class="sub-header">{{ content }}</article>
 <section class="staff page-content-area">
-  {% assign staff = site.data.staff | sort: 'order' %}
+  {% assign staff = site.staff | sort: 'order' %}
   {% for item in staff %}
     <figure class="staff-member page-content-item">
       <div class="headshot">
-        <img src="{{ item.image }}" alt="{{ item.name }}">
+        <img src="{{ item.image_path }}" alt="{{ item.title }}">
       </div>
       <figcaption>
         <header class="staff-header page-content-header">
-          <h4 class="staff-name">{{ item.name }}</h4>
-          <h5 class="staff-title">{{ item.title }}</h5>
+          <h4 class="staff-name">{{ item.title }}</h4>
+          <h5 class="staff-title">{{ item.job_title }}</h5>
         </header>
-        <p class="bio">{{ item.bio }}</p>
+        <p class="bio">{{ item.content }}</p>
       </figcaption>
     </figure>
   {% endfor %}
