Completed moving over collections to more editable format

--- a/_layouts/values.html
+++ b/_layouts/values.html
@@ -4,12 +4,13 @@ layout: page
 
 <article class="sub-header">{{ content }}</article>
 <section class="values page-content-area">
-  {% for item in site.data.values %}
+  {% assign value = site.values | sort: 'order' %}
+  {% for item in value %}
     <article class="value page-content-item">
       <header class="value-header page-content-header">
         <h4 class="value-title">{{ item.title }}</h4>
       </header>
-      <p class="description">{{ item.description }}</p>
+      <p class="description">{{ item.content }}</p>
     </article>
   {% endfor %}
 </section>
