--- a/_layouts/lineage.html
+++ b/_layouts/lineage.html
@@ -4,8 +4,8 @@ layout: page
 
 <article class="sub-header">{{ content }}</article>
 <section class="staff page-content-area">
-  {% assign staff = site.staff | sort: 'order' %}
-  {% for item in staff %}
+  {% assign lineage = site.lineage | sort: 'order' %}
+  {% for item in lineage %}
     <figure class="staff-member page-content-item">
       <div class="headshot">
         <img src="{{ item.image_path }}" alt="{{ item.title }}">
