Created FAQ page, updated schedule, updated background image

--- a/assets/scss/partials/global/_input.scss
+++ b/assets/scss/partials/global/_input.scss
@@ -9,12 +9,12 @@ textarea {
   width: 100%;
   max-width: 100%;
   background: transparent;
-  font-family: 'Nunito', arial, sans-serif;
+  font-family: 'Josefin Sans', arial, sans-serif;
   border: {
     top: 0;
     left: 0;
     right: 0;
-    bottom: 2px solid transparent;
+    bottom: 2px solid rgba($white, .5);
   }
   transition: {
     property: border;
@@ -22,7 +22,7 @@ textarea {
     timing-function: $cubic;
   }
   &:focus {
-    border-bottom: 2px solid $blue;
+    border-bottom: 2px solid $orange;
   }
 }
 input[type="file"] {
