--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,6 @@
     </span>
   </div>
   <div class="right">
-    <span>Website by: <a href="mailto:daniel.p.jauch@gmail.com">Daniel Jauch</a></span>
+    <span>Website by: <a href="https://danieljauch.bitbucket.io/">Daniel Jauch</a></span>
   </div>
 </footer>
