--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
+<!-- <div class="bg-img"><img src="assets/images/bg.png" alt="Dojo"></div> -->
 <header class="site-header">
   <div class="logo-section">
-    <a href="/"><img class="site-logo" src="/assets/img/logo.png" alt="Kaizen IBBA"></a>
+    <a href="/"><img class="site-logo" src="/assets/images/logo.png" alt="Kaizen IBBA"></a>
   </div>
   <nav class="top-nav" id="menu">
     {% include nav.html nav=site.data.menu %}
