Pushing google analytics stuff and gulp tweaks

--- a/_includes/login.html
+++ b/_includes/login.html
@@ -1,4 +1,5 @@
 <form action="" class="login-form">
   <label for="pw">Enter your password:</label>
   <input type="password" id="pw">
+  <button class="btn submit-btn">Sign In <i class="fa fa-sign-in" aria-hidden="true"></i></button>
 </form>
