--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -14,7 +14,7 @@ layout: default
         <header>
           <h2>Programs</h2>
         </header>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
+        <p class="editable">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
       </a>
     </article>
     <article class="front-display-box">
@@ -22,7 +22,7 @@ layout: default
         <header>
           <h2>Events</h2>
         </header>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
+        <p class="editable">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
       </a>
     </article>
     <article class="front-display-box">
@@ -30,7 +30,7 @@ layout: default
         <header>
           <h2>Gallery</h2>
         </header>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
+        <p class="editable">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
       </a>
     </article>
   </section>
