--- a/_layouts/members.html
+++ b/_layouts/members.html
@@ -3,9 +3,11 @@ layout: page
 ---
 
 <section class="login-area">{% include login.html %}</section>
-<section class="staff page-content-area">
-  {{ content }}
-</section>
-<section class="staff page-content-area">
-  {% include events.html %}
-</section>
+<div class="hide-not-logged-in">
+  <section class="staff page-content-area">
+    {{ content }}
+  </section>
+  <section class="staff page-content-area">
+    {% include events.html %}
+  </section>
+</div>
