--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -21,3 +21,4 @@
 @import 'partials/page/staff';
 @import 'partials/page/programs';
 @import 'partials/page/events';
+@import 'partials/page/members';
