--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 	<meta name="robots" content="follow, index" />
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+	<meta name="google-site-verification" content="B7sNiJPxLSv5BgVhWJiO-5te2mDHFXc6dJBpcAdB0as" />
 	<!-- Open Graph -->
 	<meta property="og:url" content="{{ page.url | prepend:site.url }}" />
 	<meta property="og:site_name" content="{{ site.title }}" />
