--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,7 +6,7 @@
 <script src="/assets/js/prod/script.js"></script>
 <script src="/assets/js/prod/jquery.colorbox-min.js"></script>
 
-<!-- {% if site.google_analytics_tracking_id %}
+{% if site.google_analytics_tracking_id %}
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -15,4 +15,4 @@
     ga('create', '{{ site.google_analytics_tracking_id }}', 'auto');
     ga('send', 'pageview');
   </script>
-{% endif %} -->
+{% endif %}
