--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,8 +24,23 @@
 	<script>window.Modernizr || document.write('<script src="/assets/js/prod/modernizr-2.8.3.min.js"><\/script>')</script>
 
 	<!-- Apple Touch, Fav Icon, and Windows Tile -->
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-	<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+	<link rel="apple-touch-icon" sizes="57x57" href="/assets/images/fav/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/assets/images/fav/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/assets/images/fav/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/assets/images/fav/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/assets/images/fav/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/assets/images/fav/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/assets/images/fav/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/assets/images/fav/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/fav/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/assets/images/fav/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/fav/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/assets/images/fav/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/fav/favicon-16x16.png">
+	<link rel="manifest" href="/assets/images/fav/manifest.json">
+	<meta name="msapplication-TileColor" content="#940101">
+	<meta name="msapplication-TileImage" content="/assets/images/fav/ms-icon-144x144.png">
+	<meta name="theme-color" content="#940101">
 
 	<!-- HTML 5 Shiv -->
 	<!--[if lt IE 9]> <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script> <![endif]-->
