--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -9,29 +9,35 @@ layout: default
   </header>
   <section class="content-area">{{ content }}</section>
   <section class="content-area">
-    <article class="front-display-box">
+    <div class="front-flex-wrapper">
       <a href="/programs/">
-        <header>
-          <h2>Programs</h2>
-        </header>
-        <p class="editable">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
+        <article class="front-display-box">
+          <header>
+            <h2>Programs</h2>
+          </header>
+          <p class="editable">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
+        </article>
       </a>
-    </article>
-    <article class="front-display-box">
+    </div>
+    <div class="front-flex-wrapper">
       <a href="/events/">
-        <header>
-          <h2>Events</h2>
-        </header>
-        <p class="editable">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
+        <article class="front-display-box">
+          <header>
+            <h2>Events</h2>
+          </header>
+          <p class="editable">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
+        </article>
       </a>
-    </article>
-    <article class="front-display-box">
+    </div>
+    <div class="front-flex-wrapper">
       <a href="/gallery/">
-        <header>
-          <h2>Gallery</h2>
-        </header>
-        <p class="editable">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
+        <article class="front-display-box">
+          <header>
+            <h2>Gallery</h2>
+          </header>
+          <p class="editable">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus temporibus assumenda excepturi sequi repellat ad praesentium, repudiandae itaque deserunt quas blanditiis tenetur nostrum quaerat expedita mollitia, reprehenderit, odit nam reiciendis?</p>
+        </article>
       </a>
-    </article>
+    </div>
   </section>
 </main>
