--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,9 +1,6 @@
-<div class="social-icon">
-	<a href="{{ site.facebook }}" title="Kaizen IBBA on Facebook">
-		<picture>
-			<source type="image/svg+xml" srcset="/assets/images/social/fb.svg">
-			<img class="soc-logo facebook" src="/assets/images/social/fb.png" alt="Facebook">
-		</picture>
-		<h6 class="soc-text">Follow us on Facebook</h6>
-	</a>
-</div>
+<hr>
+<h4>Find us on Social Media:</h4>
+<ul class="social-list">
+	<li><a href="{{ site.facebook }}" class="btn"><i class="fa fa-facebook-square" aria-hidden="true"></i> Follow us on Facebook</a></li>
+	<li><a href="{{ site.youtube }}" class="btn"><i class="fa fa-youtube-play" aria-hidden="true"></i> Follow us on YouTube</a></li>
+</ul>
