--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,6 +13,7 @@
 @import 'partials/global/tooltip';
 
 @import 'partials/layout/header';
+@import 'partials/layout/nav';
 @import 'partials/layout/main';
 @import 'partials/layout/footer';
 
@@ -22,3 +23,4 @@
 @import 'partials/page/programs';
 @import 'partials/page/events';
 @import 'partials/page/members';
+@import 'partials/page/social';
