--- a/assets/scss/partials/page/_front.scss
+++ b/assets/scss/partials/page/_front.scss
@@ -1,21 +1,35 @@
 .front {
   .content-area {
+    .front-display-box {
+      header {
+        padding-bottom: .25rem;
+        border-bottom: .25rem solid $red;
+        margin-bottom: .25rem;
+      }
+    }
     @include breakpoint($tablet) {
-      display: flex;
       .front-display-box {
-        margin: 1rem;
+        margin: .5rem;
         padding: 1rem;
-        flex: 25% 1;
         background: lighten($black, 10%);
+        header {
+          padding-bottom: .5rem;
+          margin-bottom: .5rem;
+        }
+      }
+    }
+    @include breakpoint($desktop) {
+      display: inline-grid;
+      grid: {
+        template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
+      }
+      .front-display-box {
+        padding: 1rem;
         transition: {
           property: transform;
           duration: .5s;
           timing-function: $cubic;
-        }
-        header {
-          padding-bottom: .5rem;
-          border-bottom: .25rem solid $red;
-          margin-bottom: .5rem;
         }
         p {
           font-size: 1.5rem;
