changed the social include

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,6 +1,8 @@
-<hr>
-<h4>Find us on Social Media:</h4>
-<ul class="social-list">
-	<li><a href="{{ site.facebook }}" class="btn"><i class="fa fa-facebook-square" aria-hidden="true"></i> Follow us on Facebook</a></li>
-	<li><a href="{{ site.youtube }}" class="btn"><i class="fa fa-youtube-play" aria-hidden="true"></i> Follow us on YouTube</a></li>
-</ul>
+<footer class="social">
+	<hr>
+	<h4>Find us on Social Media:</h4>
+	<ul class="social-list">
+		<li><a href="{{ site.facebook }}" class="btn"><i class="fa fa-facebook-square" aria-hidden="true"></i> Follow us on Facebook</a></li>
+		<li><a href="{{ site.youtube }}" class="btn"><i class="fa fa-youtube-play" aria-hidden="true"></i> Follow us on YouTube</a></li>
+	</ul>
+</footer>
