--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -25,5 +25,5 @@ layout: default
       </div>
     {% endfor %}
   </section>
-  <footer class="social">{% include social.html %}</footer>
+  {% include social.html %}
 </main>
