--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,5 +7,5 @@ layout: default
     <h1>{{ page.title }}</h1>
   </header>
   <section class="content-area">{{ content }}</section>
-  <footer class="social">{% include social.html %}</footer>
+  {% include social.html %}
 </main>
