Slight visual changes for social, footer, header. Made Events page editable

--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-<article class="sub-header">{{ content }}</article>
+<article class="sub-header editable">{{ content }}</article>
 <section class="events page-content-area">
   <article class="calendar page-content-item">
     <header class="page-content-header"><h4>Events:</h4></header>
