--- a/assets/scss/partials/page/_social.scss
+++ b/assets/scss/partials/page/_social.scss
@@ -1,7 +1,11 @@
-.social-list {
-  @include inline-list;
-  margin-left: 1rem;
-  li {
-    margin: 0 .5rem .5rem 0;
+.social {
+  h4 {
+    padding: 0;
+  }
+  .social-list {
+    @include inline-list;
+    li {
+      margin: 0 .5rem 1rem 0;
+    }
   }
 }
