Updated '_layouts/events.html' via CloudCannon

--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-<article class="sub-header editable">{{ content }}</article>
+<article class="sub-header editable" data-cms-content-wrapper="/_layouts/events.html"><p>At Kaizen International Black Belt Academy, we believe in providing opportunities for community connection and personal growth. We hope you&rsquo;ll find areas to get involved, grow and make connections This is where we&rsquo;ll keep you posted!</p></article>
 <section class="events page-content-area">
   <article class="calendar page-content-item">
     <header class="page-content-header"><h4>Events:</h4></header>
