Added a few style touchups, gallery styling, member page accordions, and events articles

--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -2,10 +2,29 @@
 layout: page
 ---
 
-<article class="sub-header editable" data-cms-content-wrapper="/_layouts/events.html"><p>At Kaizen International Black Belt Academy, we believe in providing opportunities for community connection and personal growth. We hope you&rsquo;ll find areas to get involved, grow and make connections This is where we&rsquo;ll keep you posted!</p></article>
+<article class="sub-header editable" data-cms-content-wrapper="/_layouts/events.html">
+  <p>At Kaizen International Black Belt Academy, we believe in providing opportunities for community connection and personal growth. We hope you'll find areas to get involved, grow and make connections. This is where we'll keep you posted!</p>
+</article>
+<section class="events posts-area page-content-area">
+  {% for post in site.articles %}
+    {% if post.published %}
+      <a href="{{ post.permalink }}">
+        <article class="post page-content-item">
+          <header class="post-header page-content-header">
+            <h4 class="post-title">{{ post.title }}</h4>
+          </header>
+          <p class="description post-description">{{ post.description }}</p>
+          {% if post.image_path %}
+            <img src="{{ post.image_path }}" alt="{{ post.title }}" class="post-image">
+          {% endif %}
+        </article>
+      </a>
+    {% endif %}
+  {% endfor %}
+</section>
 <section class="events page-content-area">
   <article class="calendar page-content-item">
-    <header class="page-content-header"><h4>Events:</h4></header>
+    <header class="page-content-header"><h4>Calendar:</h4></header>
     <iframe src="https://calendar.google.com/calendar/embed?src=e388utric889edforu1lf069tc%40group.calendar.google.com&ctz=America/Denver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
   </article>
 </section>
