--- a/assets/scss/partials/page/_page.scss
+++ b/assets/scss/partials/page/_page.scss
@@ -29,6 +29,9 @@
         }
       }
     }
+    p {
+      padding: 0 1rem;
+    }
     @include breakpoint($tablet) {
       h4 {
         display: inline-block;
