--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,4 +23,6 @@
 @import 'partials/page/programs';
 @import 'partials/page/events';
 @import 'partials/page/members';
+@import 'partials/page/gallery';
+@import 'partials/page/accordion';
 @import 'partials/page/social';
