--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,16 +1,16 @@
 ---
-layout: default
+layout: page
 ---
 
-<div class="content-wrapper full-width">
-  <main class="wrap">
-      <header>
-        <h1>{{ page.title }}</h1>
-        <h3 class="subtitle">{{ page.subtitle }}</h3>
-      </header>
-      <section>
-      	{{ content }}
-	    {% include gallery.html %}
-	  </section>
-  </main>
-</div>
+<section class="gallery-list page-content-area image-list">
+  {% for item in page.images %}
+    <a href="{{ item.image_path }}">
+  		<figure class="gallery-item">
+        <img class="gallery-image" src="{{ item.image_path }}" alt="{{ item.title }}">
+        <figcaption>
+          <p class="expand-symbol"><i class="fa fa-arrows-alt" aria-hidden="true"></i></p>
+        </figcaption>
+  		</figure>
+    </a>
+  {% endfor %}
+</section>
