--- a/_layouts/members.html
+++ b/_layouts/members.html
@@ -4,10 +4,32 @@ layout: page
 
 <section class="login-area">{% include login.html %}</section>
 <div class="hide-not-logged-in">
+  <section class="staff page-content-area">{{ content }}</section>
   <section class="staff page-content-area">
-    {{ content }}
-  </section>
-  <section class="staff page-content-area">
-    {% include events.html %}
+    <article class="accordion">
+      <header class="accordion-header">
+        <h3>Information</h3>
+        <i class="fa fa-chevron-down accordion-toggle-btn btn" aria-hidden="true"></i>
+      </header>
+      <div class="accordion-container information-accordion">
+        <p class="editable">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi eaque assumenda veritatis. Labore, quae iste molestias illo, possimus, modi eligendi dolor, unde doloribus natus blanditiis odit aut pariatur tempore quod.</p>
+      </div>
+    </article>
+    <article class="accordion">
+      <header class="accordion-header">
+        <h3>Documents</h3>
+        <i class="fa fa-chevron-down accordion-toggle-btn btn" aria-hidden="true"></i>
+      </header>
+      <div class="accordion-container document-accordion">
+        <p class="editable">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi eaque assumenda veritatis. Labore, quae iste molestias illo, possimus, modi eligendi dolor, unde doloribus natus blanditiis odit aut pariatur tempore quod.</p>
+      </div>
+    </article>
+    <article class="accordion">
+      <header class="accordion-header">
+        <h3>Schedules</h3>
+        <i class="fa fa-chevron-down accordion-toggle-btn btn" aria-hidden="true"></i>
+      </header>
+      <div class="accordion-container calendar-accordion">{% include events.html %}</div>
+    </article>
   </section>
 </div>
