--- a/assets/scss/partials/layout/_main.scss
+++ b/assets/scss/partials/layout/_main.scss
@@ -1,15 +1,18 @@
 .site-wrap {
-  padding: 8rem 0 2rem;
+  padding: 10rem 0 2rem;
 }
 main {
+  position: relative;
   width: calc(100% - 2rem);
+  min-height: 75vh;
   max-width: 80rem;
   margin: 0 auto 3rem;
-  padding: 1em;
+  padding: 1rem 1rem 7rem;
   background: linear-gradient(to bottom right, lighten($black, 5%), darken($red, 25%));
   box-shadow: 0 0 2rem $black;
   &.front {
     margin: 2rem auto;
+    min-height: 40vh;
     @include breakpoint($tablet) {
       margin: 20rem auto 2rem;
     }
