--- a/_layouts/members.html
+++ b/_layouts/members.html
@@ -8,7 +8,7 @@ layout: page
   <section class="staff page-content-area">
     <article class="accordion">
       <header class="accordion-header">
-        <h3>Information</h3>
+        <h3>Curriculum</h3>
         <i class="fa fa-chevron-down accordion-toggle-btn btn" aria-hidden="true"></i>
       </header>
       <div class="accordion-container information-accordion">
