--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -2,6 +2,9 @@
 layout: page
 ---
 
+<section class="page-content-area">
+  <a class="btn" href="/gallery/">Back to all galleries</a>
+</section>
 <section class="gallery-list page-content-area image-list">
   {% for item in page.images %}
     <a href="{{ item.image_path }}">
